--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 <div class="nav">
 <ul>
   <li>
-    Nets
+    DoBots
     <ul>
       <li><a class="nav" href="index.html">Introduction</a></li>
     </ul>
